Correct line break in description with CSS instead of HTML

--- a/theme/static/css/creative.css
+++ b/theme/static/css/creative.css
@@ -106,6 +106,12 @@ section {
     width: 280px;
 }
 
+#about .content {
+    max-width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 
 /* HOBBIES */
 #hobbies .row {
